--- a/html/head.html
+++ b/html/head.html
@@ -3,9 +3,10 @@
   <head>
     <title>BEST © Arturo B. Mart&iacute;n</title>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Julius+Sans+One&family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/master.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&family=Dancing+Script:wght@700&family=Julius+Sans+One&family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/includes/css/master.css">
     <script src="https://kit.fontawesome.com/e6dc47c4f5.js" crossorigin="anonymous"></script>
+    <script src="/includes/jquery/jquery-3.5.1.min.js"></script>
   </head>
   <body>
 
