Ejercicio de las cajas de colores

--- a/html/head.html
+++ b/html/head.html
@@ -18,6 +18,7 @@
     <article id="sections">
       <a href="/html/calculadora/calculadora.html">Calculadora</a>
       <a href="/html/formulario.html.php">Formularios</a>
+      <a href="/html/colores/index.html">Colores</a>
       <a href="#">Opciones</a>
     </article>
   </header>
