--- a/html/colores/index.html
+++ b/html/colores/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="master.css">
+    <script src="https://kit.fontawesome.com/e6dc47c4f5.js" crossorigin="anonymous"></script>
     <title>Colores © Arturo B. Mart&iacute;n</title>
   </head>
   <body>
     <header>
       <article>
-        <a href="/">&laquo;</a>
+        <a href="/"><i class="fas fa-arrow-left"></i></a>
       </article>
       <article>
         <h1>Colores</h1>
@@ -17,22 +18,52 @@
 
     <main>
       <article id="1" class="cuadrado azul">
-        <button onclick="moveLeft(1)" type="button" name="button">&laquo;</button>
-        <button onclick="moveRight(1)" type="button" name="button">&raquo;</button>
-        <button onclick="moveUp(1)" type="button" name="button">arriba</button>
-        <button onclick="moveDown(1)" type="button" name="button">abajo</button>
+        <button class="moveUp" onclick="moveUp(1)" type="button" name="button">
+          <i class="fas fa-arrow-up"></i>
+        </button>
+        <section>
+          <button class="moveLeft" onclick="moveLeft(1)" type="button" name="button">
+            <i class="fas fa-arrow-left"></i>
+          </button>
+          <button class="moveRight" onclick="moveRight(1)" type="button" name="button">
+            <i class="fas fa-arrow-right"></i>
+          </button>
+        </section>
+        <button class="moveDown" onclick="moveDown(1)" type="button" name="button">
+            <i class="fas fa-arrow-down"></i>
+        </button>
       </article>
       <article id="2" class="cuadrado verde">
-        <button onclick="moveLeft(2)" type="button" name="button">&laquo;</button>
-        <button onclick="moveRight(2)" type="button" name="button">&raquo;</button>
-        <button onclick="moveUp(2)" type="button" name="button">arriba</button>
-        <button onclick="moveDown(2)" type="button" name="button">abajo</button>
+        <button class="moveUp" onclick="moveUp(2)" type="button" name="button">
+          <i class="fas fa-arrow-up"></i>
+        </button>
+        <section>
+          <button class="moveLeft" onclick="moveLeft(2)" type="button" name="button">
+            <i class="fas fa-arrow-left"></i>
+          </button>
+          <button class="moveRight" onclick="moveRight(2)" type="button" name="button">
+            <i class="fas fa-arrow-right"></i>
+          </button>
+        </section>
+        <button class="moveDown" onclick="moveDown(2)" type="button" name="button">
+          <i class="fas fa-arrow-down"></i>
+        </button>
       </article>
       <article id="3" class="cuadrado naranja">
-        <button onclick="moveLeft(3)" type="button" name="button">&laquo;</button>
-        <button onclick="moveRight(3)" type="button" name="button">&raquo;</button>
-        <button onclick="moveUp(3)" type="button" name="button">arriba</button>
-        <button onclick="moveDown(3)" type="button" name="button">abajo</button>
+        <button class="moveUp" onclick="moveUp(3)" type="button" name="button">
+          <i class="fas fa-arrow-up"></i>
+        </button>
+        <section>
+          <button class="moveLeft" onclick="moveLeft(3)" type="button" name="button">
+            <i class="fas fa-arrow-left"></i>
+          </button>
+          <button class="moveRight" onclick="moveRight(3)" type="button" name="button">
+            <i class="fas fa-arrow-right"></i>
+          </button>
+        </section>
+        <button class="moveDown" onclick="moveDown(3)" type="button" name="button">
+          <i class="fas fa-arrow-down"></i>
+        </button>
       </article>
     </main>
 
@@ -41,28 +72,48 @@
     </footer>
 
     <script type="text/javascript">
+      window.addEventListener('load', function(){
+        let blue = document.getElementById(1);
+        let green = document.getElementById(2);
+        let orange = document.getElementById(3);
+
+        blue.style.transition = "transform 1s";
+        blue.style.transform = "translateX(100px)";
+
+        green.style.transition = "transform 1s";
+        green.style.transform = "translateY(100px)";
+
+        orange.style.transition = "transform 1s";
+        orange.style.transform = "translateX(-100px)";
+      });
+
       function moveLeft(id)
       {
         let container = document.getElementById(id);
-        container.style.transform = "translateX(-500px)";
+        container.style.transition = "transform 1s";
+        container.style.transform = "translateX(-100px)";
+        container.offsetLeft = (container.style.left - 100);
       }
 
       function moveRight(id)
       {
         let container = document.getElementById(id);
-        container.style.transform = "translateX(500px)";
+        container.style.transition = "transform 1s";
+        container.style.transform = "translateX(100px)";
       }
 
       function moveUp(id)
       {
         let container = document.getElementById(id);
-        container.style.transform = "translateY(-200px)";
+        container.style.transition = "transform 1s";
+        container.style.transform = "translateY(-100px)";
       }
 
       function moveDown(id)
       {
         let container = document.getElementById(id);
-        container.style.transform = "translateY(200px)";
+        container.style.transition = "transform 1s";
+        container.style.transform = "translateY(100px)";
       }
     </script>
   </body>
