--- a/html/foot.html
+++ b/html/foot.html
@@ -1,3 +1,8 @@
+  <script type="text/javascript">
+    function showMenu() {
+      $("#sections").slideToggle("slow");
+    }
+  </script>
     <footer>
       <article class="logo">
         <h2>The Best</h2>
