Añadido el archivo de audio en /mmedia/audio

--- a/html/foot.html
+++ b/html/foot.html
@@ -1,20 +1,23 @@
-  <script type="text/javascript">
-    function showMenu() {
-      $("#sections").slideToggle("slow");
-    }
-  </script>
+    <script type="text/javascript">
+      function showMenu() {
+        $("#sections").slideToggle("slow");
+      }
+    </script>
     <footer>
       <article class="logo">
         <h2>The Best</h2>
       </article>
 
-      <article id="credits">
+      <article id="music">
+        <audio src="/mmedia/audio/The_Beauty_Around_Us_✨_.mp3" controls>
 
+        </audio>
       </article>
 
       <article class="author">
         <p>Arturo B. Mart&iacute;n</p>
       </article>
     </footer>
+    <p style="font-size: 10px; font-style: italic; padding: 0 10px 5px 10px;">Todo contenido multimedia mostrado en esta web est&aacute; libre de derechos de autor</p>
   </body>
 </html>
