Pequeños detalles pulidos

--- a/html/foot.html
+++ b/html/foot.html
@@ -9,7 +9,7 @@
       </article>
 
       <article id="music">
-        <audio src="/mmedia/audio/The_Beauty_Around_Us_✨_.mp3" controls>
+        <audio src="/mmedia/audio/The_Beauty_Around_Us_.mp3" controls>
 
         </audio>
       </article>
